# argoneon

./: .gitignore  README.md  argoneon.sh  log.txt  pyproject.toml
scripts/: argon-config  argon-ir  argon-rtcconfig  argon-shutdown  argoneond.service  argononed.service
src/argoneon/: cli.py  config.py  eond.py  irdecoder.py  logging.py  oled.py  oned.py  status.py  sysinfo.py  version.py
